test_suite/tests/ui/duplicate-attribute/two-rename-ser.stderr
error: duplicate serde attribute `rename`
 --> $DIR/two-rename-ser.rs:6:13
  |
6 |     #[serde(rename(serialize = "y"))]
  |             ^^^^^^
